// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-1 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --wp-g2-flex-gap: calc(var(--wp-g2-grid-base) * 2);
  --wp-g2-flex-item-margin-bottom: 0;
  --wp-g2-flex-item-margin-right: var(--wp-g2-flex-gap);
  --wp-g2-flex-item-margin-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border-color: transparent;
  border-radius: var(--wp-g2-control-border-radius);
  border-style: solid;
  border-width: 1px;
  box-shadow: 0 0 0 var(--wp-g2-control-box-shadow-focus-size) transparent;
  box-sizing: border-box;
  color: var(--wp-g2-color-text);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: var(--wp-g2-font-size);
  height: auto;
  line-height: 1;
  min-height: var(--wp-g2-control-height);
  outline: none;
  padding-bottom: calc(var(--wp-g2-grid-base) * 1);
  padding-left: var(--wp-g2-control-padding-x);
  padding-right: var(--wp-g2-control-padding-x);
  padding-top: calc(var(--wp-g2-grid-base) * 1);
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  touch-action: manipulation;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: auto;
  text-align: center;
  color: var(--wp-g2-button-text-color);
  font-weight: 600;
  padding-left: var(--wp-g2-button-padding-x);
  padding-right: var(--wp-g2-button-padding-x);
  background-color: var(--wp-g2-button-secondary-color);
  border-color: var(--wp-g2-button-secondary-border-color);
  color: var(--wp-g2-button-secondary-text-color);
}

@media (prefers-reduced-motion) {
  .emotion-1 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-1 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-1>*+*:not(marquee) {
  margin-left: calc(var(--wp-g2-grid-base) * 2);
}

.emotion-1>* {
  min-width: 0;
}

.emotion-1:hover,
.emotion-1:active,
.emotion-1:focus {
  -webkit-transition: all var(--wp-g2-transition-duration) cubic-bezier(0.12,0.8,0.32,1);
  transition: all var(--wp-g2-transition-duration) cubic-bezier(0.12,0.8,0.32,1);
}

.emotion-1[disabled]:not([aria-busy='true']),
.emotion-1[aria-disabled='true']:not([aria-busy='true']) {
  opacity: 0.5;
  cursor: auto;
}

.emotion-1:focus {
  box-shadow: var(--wp-g2-control-box-shadow-focus);
}

.emotion-1[data-destructive='true']:focus {
  box-shadow: var(--wp-g2-control-destructive-box-shadow-focus);
}

.emotion-1[data-icon='true'] {
  min-width: var(--wp-g2-control-height);
}

.emotion-1 svg {
  display: block;
}

.emotion-1:active {
  color: var(--wp-g2-button-text-color-active);
}

.emotion-1:hover {
  background-color: var(--wp-g2-button-secondary-color-hover);
  border-color: var(--wp-g2-button-secondary-border-color-hover);
}

.emotion-1:focus,
.emotion-1[data-focused='true'] {
  background-color: var(--wp-g2-button-secondary-color-focus);
  border-color: var(--wp-g2-button-secondary-border-color-focus);
  color: var(--wp-g2-button-secondary-text-color-focus);
}

.emotion-1:active {
  background-color: var(--wp-g2-button-secondary-color-active);
  border-color: var(--wp-g2-button-secondary-border-color-active);
  color: var(--wp-g2-button-secondary-text-color-active);
}

.emotion-1[data-destructive='true'] {
  border-color: var(--wp-g2-color-destructive);
  color: var(--wp-g2-color-destructive);
}

.emotion-1[data-destructive='true']:hover,
.emotion-1[data-destructive='true']:active,
.emotion-1[data-destructive='true']:focus,
.emotion-1[data-destructive='true'][data-focused='true'] {
  border-color: var(--wp-g2-color-destructive);
  color: var(--wp-g2-color-destructive);
}

.emotion-1[data-destructive='true']:active {
  color: var(--wp-g2-color-text);
}

.emotion-1:active {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-2 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  display: var(--wp-g2-flex-item-display);
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: var(--wp-g2-font-size);
  opacity: 1;
  white-space: nowrap;
}

@media (prefers-reduced-motion) {
  .emotion-2 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-2 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-3 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: -1px;
  box-shadow: 0 0px 0px 0 rgba(0 ,0,0,0);
  opacity: var(--wp-g2-elevation-intensity);
  left: -1px;
  right: -1px;
  top: -1px;
  -webkit-transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
  transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
}

@media (prefers-reduced-motion) {
  .emotion-3 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-3 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-4 {
  display: block!important;
  overflow: hidden;
  will-change: height;
}

.emotion-5 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  position: relative;
}

@media (prefers-reduced-motion) {
  .emotion-5 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-5 {
  -webkit-transition: none!important;
  transition: none!important;
}

<div
  class="components-collapsible wp-components-collapsible ic-cks6qv ic-192yz5d emotion-0"
  data-expanded="false"
  data-g2-c16t="true"
  data-g2-component="Collapsible"
>
  <button
    aria-busy="false"
    aria-controls="collapsible"
    aria-expanded="false"
    class="components-flex wp-components-flex ic-17cs4ki components-base-button wp-components-base-button components-button wp-components-button components-collapsible-trigger wp-components-collapsible-trigger ic-1cnobt5 ic-i0z4gr ic-1d6ec17 ic-192yz5d emotion-1"
    data-active="false"
    data-destructive="false"
    data-focused="false"
    data-g2-c16t="true"
    data-g2-component="CollapsibleTrigger"
    data-icon="false"
    type="button"
  >
    <span
      class="components-flex-item wp-components-flex-item ic-1p3tlc8 ic-192yz5d emotion-2"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Show/Hide
    </span>
    <span
      class="components-elevation wp-components-elevation ic-i1zzlu ic-192yz5d emotion-3"
      data-g2-c16t="true"
      data-g2-component="ButtonElevation"
    />
  </button>
  <div
    class="emotion-4 components-collapsible-content wp-components-collapsible-content ic-psfhp3"
    data-g2-c16t="true"
    data-g2-component="CollapsibleContent"
    hidden=""
    id="collapsible"
    style="display: none;"
  >
    <div
      class="components-animated wp-components-animated ic-pgzw5f emotion-5"
      data-g2-c16t="true"
      data-g2-component="CollapsibleInnerContent"
      style="height: 0px; opacity: 0; display: none;"
    >
      Some people are worth melting for.
    </div>
  </div>
</div>
`;

exports[`props should render visible 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-1 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --wp-g2-flex-gap: calc(var(--wp-g2-grid-base) * 2);
  --wp-g2-flex-item-margin-bottom: 0;
  --wp-g2-flex-item-margin-right: var(--wp-g2-flex-gap);
  --wp-g2-flex-item-margin-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border-color: transparent;
  border-radius: var(--wp-g2-control-border-radius);
  border-style: solid;
  border-width: 1px;
  box-shadow: 0 0 0 var(--wp-g2-control-box-shadow-focus-size) transparent;
  box-sizing: border-box;
  color: var(--wp-g2-color-text);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: var(--wp-g2-font-size);
  height: auto;
  line-height: 1;
  min-height: var(--wp-g2-control-height);
  outline: none;
  padding-bottom: calc(var(--wp-g2-grid-base) * 1);
  padding-left: var(--wp-g2-control-padding-x);
  padding-right: var(--wp-g2-control-padding-x);
  padding-top: calc(var(--wp-g2-grid-base) * 1);
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  touch-action: manipulation;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: auto;
  text-align: center;
  color: var(--wp-g2-button-text-color);
  font-weight: 600;
  padding-left: var(--wp-g2-button-padding-x);
  padding-right: var(--wp-g2-button-padding-x);
  background-color: var(--wp-g2-button-secondary-color);
  border-color: var(--wp-g2-button-secondary-border-color);
  color: var(--wp-g2-button-secondary-text-color);
}

@media (prefers-reduced-motion) {
  .emotion-1 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-1 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-1>*+*:not(marquee) {
  margin-left: calc(var(--wp-g2-grid-base) * 2);
}

.emotion-1>* {
  min-width: 0;
}

.emotion-1:hover,
.emotion-1:active,
.emotion-1:focus {
  -webkit-transition: all var(--wp-g2-transition-duration) cubic-bezier(0.12,0.8,0.32,1);
  transition: all var(--wp-g2-transition-duration) cubic-bezier(0.12,0.8,0.32,1);
}

.emotion-1[disabled]:not([aria-busy='true']),
.emotion-1[aria-disabled='true']:not([aria-busy='true']) {
  opacity: 0.5;
  cursor: auto;
}

.emotion-1:focus {
  box-shadow: var(--wp-g2-control-box-shadow-focus);
}

.emotion-1[data-destructive='true']:focus {
  box-shadow: var(--wp-g2-control-destructive-box-shadow-focus);
}

.emotion-1[data-icon='true'] {
  min-width: var(--wp-g2-control-height);
}

.emotion-1 svg {
  display: block;
}

.emotion-1:active {
  color: var(--wp-g2-button-text-color-active);
}

.emotion-1:hover {
  background-color: var(--wp-g2-button-secondary-color-hover);
  border-color: var(--wp-g2-button-secondary-border-color-hover);
}

.emotion-1:focus,
.emotion-1[data-focused='true'] {
  background-color: var(--wp-g2-button-secondary-color-focus);
  border-color: var(--wp-g2-button-secondary-border-color-focus);
  color: var(--wp-g2-button-secondary-text-color-focus);
}

.emotion-1:active {
  background-color: var(--wp-g2-button-secondary-color-active);
  border-color: var(--wp-g2-button-secondary-border-color-active);
  color: var(--wp-g2-button-secondary-text-color-active);
}

.emotion-1[data-destructive='true'] {
  border-color: var(--wp-g2-color-destructive);
  color: var(--wp-g2-color-destructive);
}

.emotion-1[data-destructive='true']:hover,
.emotion-1[data-destructive='true']:active,
.emotion-1[data-destructive='true']:focus,
.emotion-1[data-destructive='true'][data-focused='true'] {
  border-color: var(--wp-g2-color-destructive);
  color: var(--wp-g2-color-destructive);
}

.emotion-1[data-destructive='true']:active {
  color: var(--wp-g2-color-text);
}

.emotion-1:active {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-2 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  display: var(--wp-g2-flex-item-display);
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: var(--wp-g2-font-size);
  opacity: 1;
  white-space: nowrap;
}

@media (prefers-reduced-motion) {
  .emotion-2 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-2 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-3 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: -1px;
  box-shadow: 0 0px 0px 0 rgba(0 ,0,0,0);
  opacity: var(--wp-g2-elevation-intensity);
  left: -1px;
  right: -1px;
  top: -1px;
  -webkit-transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
  transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
}

@media (prefers-reduced-motion) {
  .emotion-3 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-3 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-4 {
  display: block!important;
  overflow: hidden;
  will-change: height;
}

.emotion-5 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  position: relative;
}

@media (prefers-reduced-motion) {
  .emotion-5 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-5 {
  -webkit-transition: none!important;
  transition: none!important;
}

<div
  class="components-collapsible wp-components-collapsible ic-cks6qv ic-192yz5d emotion-0"
  data-expanded="true"
  data-g2-c16t="true"
  data-g2-component="Collapsible"
>
  <button
    aria-busy="false"
    aria-controls="collapsible"
    aria-expanded="true"
    class="components-flex wp-components-flex ic-17cs4ki components-base-button wp-components-base-button components-button wp-components-button components-collapsible-trigger wp-components-collapsible-trigger ic-1cnobt5 ic-i0z4gr ic-1d6ec17 ic-192yz5d emotion-1"
    data-active="false"
    data-destructive="false"
    data-focused="false"
    data-g2-c16t="true"
    data-g2-component="CollapsibleTrigger"
    data-icon="false"
    type="button"
  >
    <span
      class="components-flex-item wp-components-flex-item ic-1p3tlc8 ic-192yz5d emotion-2"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Show/Hide
    </span>
    <span
      class="components-elevation wp-components-elevation ic-i1zzlu ic-192yz5d emotion-3"
      data-g2-c16t="true"
      data-g2-component="ButtonElevation"
    />
  </button>
  <div
    class="emotion-4 components-collapsible-content wp-components-collapsible-content ic-psfhp3"
    data-g2-c16t="true"
    data-g2-component="CollapsibleContent"
    id="collapsible"
  >
    <div
      class="components-animated wp-components-animated ic-pgzw5f emotion-5"
      data-g2-c16t="true"
      data-g2-component="CollapsibleInnerContent"
      style="height: auto; opacity: 1; display: block;"
    >
      Some people are worth melting for.
    </div>
  </div>
</div>
`;
